--- a/src/main/resources/templates/main.mustache
+++ b/src/main/resources/templates/main.mustache
@@ -4,6 +4,21 @@
     <title>Main page</title>
 </head>
 <body>
-    <div>{{main}} page</div>
+    <form method="post">
+        <input type="text" name="text" placeholder="Введите собщение">
+        <input type="text" name="tag" placeholder="Тэг">
+        <button type="submit">Добавить</button>
+    </form>
+    <form method="post" action="filter">
+        <input type="text" name="filter">
+        <button type="submit">Найти</button>
+    </form>
+    <div>Список сообщений</div>
+    {{#messages}}
+        <b>{{id}}</b>
+        <span>{{text}}</span>
+        <i>{{tag}}</i>
+        <br>
+    {{/messages}}
 </body>
 </html>
