--- a/src/main/resources/templates/greeting.mustache
+++ b/src/main/resources/templates/greeting.mustache
@@ -4,6 +4,7 @@
     <title>Greeting page</title>
 </head>
 <body>
-    <div>Hello, {{name}}!</div>
+    <div>Hello, user!</div>
+    <a href="/main">Go to main page</a>
 </body>
 </html>
