--- a/src/main/resources/templates/registration.mustache
+++ b/src/main/resources/templates/registration.mustache
@@ -4,13 +4,16 @@
     <title>Spring Security Example </title>
 </head>
 <body>
-<form action="/login" method="post">
+Registration form
+{{#message}}
+    {{message}}
+{{/message}}
+<form action="/registration" method="post">
     <div><label> User Name : <input type="text" name="username"/> </label></div>
     <div><label> Password: <input type="password" name="password"/> </label></div>
     <div><input type="submit" value="Sign In"/></div>
     <!--    поле, которое передает специальный токен сессии, без этого токена не будут работать формы-->
     <input type="hidden" name="_csrf" value="{{_csrf.token}}">
 </form>
-<a href="/registration">Dont have account? sign in!</a>
 </body>
 </html>
